--- a/css/admin.css
+++ b/css/admin.css
@@ -61,7 +61,6 @@ section {
   top: 0;
   left: 0;
   z-index: 1000;
-
 }
 .message span {
   font-size: 2rem;
@@ -72,65 +71,81 @@ section {
   cursor: pointer;
   font-size: 2.5rem;
   cursor: pointer;
-  transition: .2s linear;
+  transition: 0.2s linear;
 }
 .message i:hover {
   transform: rotate(90deg);
   color: var(--black);
 }
 
-
-
 .btn,
-.option-btn,
 .delete-btn,
+.option-btn,
+.inline-btn,
+.inline-option-btn,
+.inline-delete-btn {
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1.8rem;
+  color: var(--white);
+  padding: 1.2rem 3rem;
+  text-transform: capitalize;
+  text-align: center;
+}
+
 .inline-btn,
 .inline-option-btn,
 .inline-delete-btn {
   display: inline-block;
-  border-radius: 0.5rem;
-  margin-top: 1rem;
-  font-size: 1.8rem;
-  color: var(--white);
-  cursor: pointer;
-  padding: 1rem 3rem;
-  text-align: center;
-  text-transform: capitalize;
+  margin-right: 1rem;
 }
-.option-btn,
+
 .btn,
-.delete-btn {
+.delete-btn,
+.option-btn {
+  display: block;
   width: 100%;
-}
-.inline-btn,
-.inline-option-btn,
-.inline-delete-btn {
-  margin-right: 0.5rem;
 }
 
 .inline-btn,
 .btn {
   background-color: var(--main-color);
 }
+
+.inline-delete-btn,
+.delete-btn {
+  background-color: var(--red);
+}
+
 .inline-option-btn,
 .option-btn {
   background-color: var(--orange);
 }
-.inline-delete-btn,
-.option-btn {
-  background-color: var(--red);
-}
+
 .btn:hover,
-.option-btn:hover,
 .delete-btn:hover,
+.option-btn:hover,
 .inline-btn:hover,
-.inline-option-btn:hover,
-.inline-delete-btn:hover {
+.inline-delete-btn:hover,
+.inline-option-btn:hover {
   background-color: var(--black);
 }
+
 .flex-btn {
   display: flex;
   gap: 1rem;
+}
+
+.empty {
+  width: 100%;
+  border: var(--border);
+  background-color: var(--white);
+  padding: 1.5rem;
+  font-size: 2rem;
+  color: var(--red);
+  text-align: center;
+  box-shadow: var(--box-shadow);
 }
 .heading {
   text-align: center;
@@ -232,19 +247,19 @@ section {
 .dashboard .box-container .box h3 {
   font-size: 2rem;
   color: var(--black);
-  padding-bottom: 1rem ;
+  padding-bottom: 1rem;
 }
 .dashboard .box-container .box p {
-     padding: 1.5rem 1rem;
-     margin: 1rem 0;
-     border-radius: .5rem;
-     background-color: var(--light-bg);
-     color: var(--light-color);
-     font-size: 1.8rem;
-     border: var(--border);
+  padding: 1.5rem 1rem;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  background-color: var(--light-bg);
+  color: var(--light-color);
+  font-size: 1.8rem;
+  border: var(--border);
 }
 
-.form-container{
+.form-container {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -252,7 +267,7 @@ section {
 }
 .form-container form {
   background-color: var(--white);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: var(--border);
   padding: 2rem;
   box-shadow: var(--box-shadow);
@@ -264,11 +279,10 @@ section {
   color: var(--black);
   text-transform: uppercase;
   padding-bottom: 1rem;
-
 }
 .form-container form p {
   padding-bottom: 1rem;
-  padding-top: .5rem;
+  padding-top: 0.5rem;
   font-size: 1.8rem;
   color: var(--light-color);
 }
@@ -278,7 +292,7 @@ section {
 .form-container form .box {
   width: 100%;
   background-color: var(--light-bg);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: var(--border);
   padding: 1.4rem;
   font-size: 1.8rem;
@@ -286,9 +300,107 @@ section {
   margin: 1rem 0;
 }
 
+.post-editor form {
+  max-width: 80rem;
+  margin: 0 auto;
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  border: var(--border);
+  border-radius: 0.5rem;
+  padding: 2rem;
+  padding-top: 1rem;
+}
+.post-editor form p {
+  color: var(--light-color);
+  font-size: 1.8rem;
+  padding-top: 1rem;
+}
+.post-editor form p span {
+  color: var(--red);
+}
 
+.post-editor form .box {
+  width: 100%;
+  border-radius: 0.5rem;
+  background-color: var(--light-bg);
+  padding: 1.4rem;
+  font-size: 2rem;
+  color: var(--black);
+  margin: 1rem 0;
+  border: var(--border);
+}
 
+.post-editor form textarea {
+  resize: none;
+  height: 40rem;
+}
+.show-posts .box-container {
+  columns: 3 30rem;
+  gap: 2rem;
+}
+.show-posts .box-container .box {
+  margin-bottom: 2rem;
+  border: var(--border);
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
+  padding: 2rem;
+  background-color: var(--white);
+  break-inside: avoid;
+  overflow-x: hidden;
+}
+.show-posts .box-container .box .image {
+  height: 20rem;
+  width: 100%;
+  object-fit: contain;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+}
+.show-posts .box-container .box .status {
+  display: inline-block;
+  border-radius: 0.5rem;
+  color: var(--white);
+  font-size: 2rem;
+  padding: 0.5rem 1.5rem;
+  margin-bottom: 1rem;
+}
 
+.show-posts .box-container .box .post-title {
+  font-size: 2rem;
+  color: var(--black);
+  width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  padding: 5rem 0;
+}
+.show-posts .box-container .box .post-content {
+  line-height: 1.5rem;
+  color: var(--light-color);
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+.show-posts .box-container .box .post-content::after {
+  content: '...s'
+}
+.show-posts .box-container .box .icons{
+  border-radius: .5rem;
+  border: var(--border);
+  background-color: var(--light-bg);
+  padding: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem 0;
+  font-size: 2rem;
+}
+.show-posts .box-container .box .icons i {
+  margin-right: .7rem;
+  color: var(--light-color);
+}
+.show-posts .box-container .box .icons span {
+  color: var(--main-color);
+}
 /* media queries starts  */
 @media (max-width: 991px) {
   html {
