--- a/css/admin.css
+++ b/css/admin.css
@@ -48,34 +48,54 @@ section {
   max-width: 1200px;
   margin: 0 auto;
 }
-
-.message {
+.message{
+  position: sticky;
+  top:0;
+  margin:0 auto;
   background-color: var(--white);
-  border-bottom: var(--border);
-  box-shadow: var(--box-shadow);
-  padding: 2rem;
+  padding:2rem;
   display: flex;
   align-items: center;
+  gap:1rem;
   justify-content: space-between;
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+  box-shadow: var(--box-shadow);
+  border-bottom:var(--border);
 }
-.message span {
+
+.message span{
   font-size: 2rem;
-  color: var(--black);
+  color:var(--black);
 }
-.message i {
-  color: var(--red);
-  cursor: pointer;
+
+.message i{
   font-size: 2.5rem;
+  color:var(--red);
   cursor: pointer;
-  transition: 0.2s linear;
 }
-.message i:hover {
-  transform: rotate(90deg);
-  color: var(--black);
+
+.message i:hover{
+  color:var(--black);
+}
+
+.heading{
+  text-align: center;
+  margin-bottom: 2rem;
+  text-transform: capitalize;
+  color:var(--black);
+  font-size: 3rem;
+}
+
+.empty{
+  border:var(--border);
+  border-radius: .5rem;
+  background-color: var(--white);
+  padding:1.5rem;
+  text-align: center;
+  width: 100%;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color:var(--red);
+  box-shadow: var(--box-shadow);
 }
 
 .btn,
@@ -137,16 +157,6 @@ section {
   gap: 1rem;
 }
 
-.empty {
-  width: 100%;
-  border: var(--border);
-  background-color: var(--white);
-  padding: 1.5rem;
-  font-size: 2rem;
-  color: var(--red);
-  text-align: center;
-  box-shadow: var(--box-shadow);
-}
 .heading {
   text-align: center;
   font-size: 3rem;
@@ -154,18 +164,18 @@ section {
   margin-bottom: 2rem;
   text-transform: capitalize;
 }
-
-.header {
+.header{
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+  top:0; left:0;
   background-color: var(--white);
+  z-index: 1000;
   border-right: var(--border);
-  padding: 2rem;
-  height: 100vh;
-  width: 30rem;
+  width: 35rem;
+  padding:2rem;
+  min-height: 100vh;
+  text-align: center;
 }
+
 .header .logo {
   font-size: 2.5rem;
   color: var(--black);
@@ -299,107 +309,128 @@ section {
   color: var(--black);
   margin: 1rem 0;
 }
-
-.post-editor form {
+.post-editor form{
+  background-color: var(--white);
+  border-radius: .5rem;
+  border: var(--border);
+  padding:2rem;
+  box-shadow: var(--box-shadow);
   max-width: 80rem;
-  margin: 0 auto;
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border: var(--border);
-  border-radius: 0.5rem;
-  padding: 2rem;
+  margin:0 auto;
   padding-top: 1rem;
 }
-.post-editor form p {
-  color: var(--light-color);
+
+.post-editor form p{
   font-size: 1.8rem;
+  color:var(--light-color);
   padding-top: 1rem;
 }
-.post-editor form p span {
-  color: var(--red);
+
+.post-editor form p span{
+  color:var(--red);
 }
 
-.post-editor form .box {
+.post-editor form .box{
   width: 100%;
-  border-radius: 0.5rem;
-  background-color: var(--light-bg);
-  padding: 1.4rem;
-  font-size: 2rem;
-  color: var(--black);
-  margin: 1rem 0;
+  margin:1rem 0;
+  border-radius: .5rem;
   border: var(--border);
+  padding:1.4rem;
+  font-size: 1.8rem;
+  color:var(--black);
+  background-color: var(--light-bg);
 }
 
-.post-editor form textarea {
-  resize: none;
+.post-editor form textarea{
   height: 40rem;
+  resize: none;
 }
-.show-posts .box-container {
-  columns: 3 30rem;
-  gap: 2rem;
+
+.post-editor form .image{
+  width: 100%;
+  height: 20rem;
+  object-fit: contain;
+  margin:1rem 0;
 }
-.show-posts .box-container .box {
-  margin-bottom: 2rem;
-  border: var(--border);
-  border-radius: 0.5rem;
-  box-shadow: var(--box-shadow);
-  padding: 2rem;
+
+.show-posts .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 33rem);
+  gap:1.5rem;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.show-posts .box-container .box{
   background-color: var(--white);
-  break-inside: avoid;
-  overflow-x: hidden;
+  border-radius: .5rem;
+  box-shadow: var(--box-shadow);
+  border:var(--border);
+  padding:2rem;
+  overflow: hidden;
 }
-.show-posts .box-container .box .image {
+
+.show-posts .box-container .box .image{
   height: 20rem;
   width: 100%;
   object-fit: contain;
   margin-bottom: 1rem;
-  margin-top: 0.5rem;
 }
-.show-posts .box-container .box .status {
+
+.show-posts .box-container .box .status{
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+  padding:.5rem 1rem;
+  border-radius: .5rem;
+  color:var(--white);
   display: inline-block;
-  border-radius: 0.5rem;
-  color: var(--white);
-  font-size: 2rem;
-  padding: 0.5rem 1.5rem;
   margin-bottom: 1rem;
 }
 
-.show-posts .box-container .box .post-title {
+.show-posts .box-container .box .title{
   font-size: 2rem;
-  color: var(--black);
-  width: 100%;
-  white-space: nowrap;
+  color:var(--black);
+  overflow: hidden;
   text-overflow: ellipsis;
-  overflow-x: hidden;
-  padding: 5rem 0;
-}
-.show-posts .box-container .box .post-content {
-  line-height: 1.5rem;
-  color: var(--light-color);
-  font-size: 1.8rem;
-  padding: 1rem 0;
+  white-space: nowrap;
+  padding:.5rem 0;
+  min-width: 100%;
 }
 
-.show-posts .box-container .box .post-content::after {
-  content: '...s'
+.show-posts .box-container .box .posts-content{
+  font-size: 1.7rem;
+  color:var(--light-color);
+  line-height: 1.5;
+  padding:1rem 0;
 }
+
+.show-posts .box-container .box .posts-content::after{
+  content: '...';
+}
+
 .show-posts .box-container .box .icons{
-  border-radius: .5rem;
-  border: var(--border);
-  background-color: var(--light-bg);
-  padding: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 1rem 0;
-  font-size: 2rem;
+  gap:1rem;
+  background-color: var(--light-bg);
+  border-radius: .5rem;
+  padding:1.5rem 2rem;
+  border:var(--border);
+  margin:.5rem 0;
 }
-.show-posts .box-container .box .icons i {
-  margin-right: .7rem;
-  color: var(--light-color);
+
+.show-posts .box-container .box .icons div{
+  font-size: 1.8rem;
 }
-.show-posts .box-container .box .icons span {
-  color: var(--main-color);
+
+.show-posts .box-container .box .icons div span{
+  color:var(--main-color);
+}
+
+.show-posts .box-container .box .icons div i{
+  color:var(--light-color);
+  margin-right: .5rem;
 }
 /* media queries starts  */
 @media (max-width: 991px) {
