--- a/css/user.css
+++ b/css/user.css
@@ -13,7 +13,7 @@
  }
  
  *{
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
