--- a/css/admin_style/admin_header.css
+++ b/css/admin_style/admin_header.css
@@ -1,80 +1,93 @@
+:root {
+  --main-color: #4834d4;
+  --red: #e74c3c;
+  --orange: #f39c12;
+  --black: #34495e;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --border: 0.2rem solid var(--black);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 
-  .header{
-    position: fixed;
-    top:0; left:0;
-    background-color: var(--white);
-    z-index: 1000;
-    border-right: var(--border);
-    width: 35rem;
-    padding:2rem;
-    min-height: 100vh;
-    text-align: center;
-  }
-  
-  .header .logo{
-    font-size: 2.5rem;
-    color:var(--black);
-  }
-  
-  .header .logo span{
-    color:var(--main-color);
-  }
-  
-  .header .profile{
-    padding:2rem;
-    border-radius: .5rem;
-    background-color: var(--light-bg);
-    margin:2rem 0;
-    border:var(--border);
-  }
-  
-  .header .profile p{
-    margin-bottom: 1.5rem;
-    font-size: 2rem;
-    color:var(--black);
-  }
-  
-  .header .navbar{
-    padding:1rem;
-  }
-  
-  .header .navbar a{
-    display: block;
-    padding:2rem 0;
-    font-size: 2rem;
-    color:var(--black);
-    text-align: left;
-  }
-  
-  .header .navbar a i{
-    margin-right: 1.5rem;
-    color:var(--main-color);
-    transition: .2s linear;
-  }
-  
-  .header .navbar a:hover i{
-    margin-right: 3rem;
-  }
-  
-  #menu-btn{
-    display: none;
-    border:var(--border);
-    border-radius: .5rem;
-    background-color: var(--white);
-    color:var(--black);
-    cursor: pointer;
-    box-shadow: var(--border);
-    height: 4.5rem;
-    line-height: 4.3rem;
-    width: 4.5rem;
-    font-size: 2rem;
-    position: sticky;
-    top:1rem; left: 1rem;
-    z-index: 10000;
-    text-align: center;
-  }
-  #menu-btn:hover{
-    background-color: var(--black);
-    color:var(--white);
-  }
-  
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--white);
+  z-index: 1000;
+  border-right: var(--border);
+  width: 35rem;
+  padding: 2rem;
+  min-height: 100vh;
+  text-align: center;
+}
+
+.header .logo {
+  font-size: 2.5rem;
+  color: var(--black);
+}
+
+.header .logo span {
+  color: var(--main-color);
+}
+
+.header .profile {
+  padding: 2rem;
+  border-radius: 0.5rem;
+  background-color: var(--light-bg);
+  margin: 2rem 0;
+  border: var(--border);
+}
+
+.header .profile p {
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+  color: var(--black);
+}
+
+.header .navbar {
+  padding: 1rem;
+}
+
+.header .navbar a {
+  display: block;
+  padding: 2rem 0;
+  font-size: 2rem;
+  color: var(--black);
+  text-align: left;
+}
+
+.header .navbar a i {
+  margin-right: 1.5rem;
+  color: var(--main-color);
+  transition: 0.2s linear;
+}
+
+.header .navbar a:hover i {
+  margin-right: 3rem;
+}
+
+#menu-btn {
+  display: none;
+  border: var(--border);
+  border-radius: 0.5rem;
+  background-color: var(--white);
+  color: var(--black);
+  cursor: pointer;
+  box-shadow: var(--border);
+  height: 4.5rem;
+  line-height: 4.3rem;
+  width: 4.5rem;
+  font-size: 2rem;
+  position: sticky;
+  top: 1rem;
+  left: 1rem;
+  z-index: 10000;
+  text-align: center;
+}
+
+#menu-btn:hover {
+  background-color: var(--black);
+  color: var(--white);
+}
