--- a/css/admin_style/admin_header.css
+++ b/css/admin_style/admin_header.css
@@ -1,6 +1,6 @@
 :root {
-  --main-color: #4834d4;
-  --red: #e74c3c;
+  --main-clr: #af2532;
+  --red: #d32f2f;
   --orange: #f39c12;
   --black: #34495e;
   --white: #fff;
@@ -25,12 +25,19 @@
 
 .header .logo {
   font-size: 2.5rem;
-  color: var(--black);
+  color: var(--main-clr);
+  font-weight: 700;
 }
 
 .header .logo span {
-  color: var(--main-color);
+  color: var(--orange);
 }
+/* .header #logo-img {
+    width: -49rem;
+  height: 30rem;
+} */
+
+
 
 .header .profile {
   padding: 2rem;
@@ -52,7 +59,7 @@
 
 .header .navbar a {
   display: block;
-  padding: 2rem 0;
+  padding: 1.5rem 0;
   font-size: 2rem;
   color: var(--black);
   text-align: left;
@@ -60,12 +67,19 @@
 
 .header .navbar a i {
   margin-right: 1.5rem;
-  color: var(--main-color);
+  color: var(--main-clr);
   transition: 0.2s linear;
 }
 
 .header .navbar a:hover i {
   margin-right: 3rem;
+}
+.header .navbar a span:hover {
+  color: var(--orange);
+}
+
+#logout:hover{
+ color: var(--red);
 }
 
 #menu-btn {
