--- a/css/admin_style/buttons.css
+++ b/css/admin_style/buttons.css
@@ -1,70 +1,78 @@
+:root {
+  --orange: #f39c12;
+  --black: #34495e;
+  --blue: #4834d4;
+  --red: #d32f2f;
+  --main-clr: #af2532;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --border: 0.2rem solid var(--black);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 
-:root{
-    --main-color:#4834d4;
-    --red:#e74c3c;
-    --orange:#f39c12;
-    --black:#34495e;
-    --white:#fff;
-    --light-bg:#f5f5f5;
-    --light-color:#999;
-    --border:.2rem solid var(--black);
-    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
-  }
-  .btn,
+.btn,
+.btn-side,
 .delete-btn,
 .option-btn,
 .inline-btn,
 .inline-option-btn,
-.inline-delete-btn{
-   margin-top: 1rem;
-   border-radius: .5rem;
-   cursor: pointer;
-   font-size: 1.8rem;
-   color:var(--white);
-   padding:1.2rem 3rem;
-   text-transform: capitalize;
-   text-align: center;
+.inline-delete-btn {
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1.8rem;
+  color: var(--white);
+  padding: 1.2rem 3rem;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 .inline-btn,
 .inline-option-btn,
-.inline-delete-btn{
-   display: inline-block;
-   margin-right: 1rem;
+.inline-delete-btn {
+  display: inline-block;
+  margin-right: 1rem;
 }
 
 .btn,
+.btn-side,
 .delete-btn,
-.option-btn{
-   display: block;
-   width: 100%;
+.option-btn {
+  display: block;
+  width: 100%;
 }
 
 .inline-btn,
-.btn{
-   background-color: var(--main-color);
+.btn {
+ background-color: var(--main-clr);
+}
+.btn-side {
+  background-color: var(--main-clr);
 }
 
 .inline-delete-btn,
-.delete-btn{
-   background-color: var(--red);
+.delete-btn {
+  background-color: var(--red);
 }
 
 .inline-option-btn,
-.option-btn{
-   background-color: var(--orange);
+.option-btn {
+  background-color: var(--orange);
 }
 
+
 .btn:hover,
+.btn-side:hover,
 .delete-btn:hover,
 .option-btn:hover,
 .inline-btn:hover,
 .inline-delete-btn:hover,
-.inline-option-btn:hover{
-   background-color: var(--black);
+.inline-option-btn:hover {
+background-color: var(--black);
 }
 
-.flex-btn{
-   display: flex;
-   gap:1rem;
+.flex-btn {
+  display: flex;
+  gap: 1rem;
 }
