--- a/css/admin_style/dashboard.css
+++ b/css/admin_style/dashboard.css
@@ -1,7 +1,7 @@
 :root {
   --main-color: #4834d4;
   --red: #e74c3c;
-  --orange: #f39c12;
+  --yellow: #e4910b;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
@@ -29,7 +29,7 @@
   
   .dashboard .box-container .box h3{
     font-size: 2.7rem;
-    color:var(--black);
+    color: var(--yellow);
   }
   
   .dashboard .box-container .box h3 span{
