--- a/css/admin_style/general_admin.css
+++ b/css/admin_style/general_admin.css
@@ -3,7 +3,7 @@
 :root {
   --main-color: #4834d4;
   --red: #e74c3c;
-  --orange: #f39c12;
+  --yellow: #e4910b;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
@@ -47,7 +47,8 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--main-color);
+  background-color: var(--light-color);
+  border-radius: 1rem;
 }
 
 section {
@@ -56,73 +57,72 @@ section {
   padding: 2rem;
 }
 
-.heading{
-    text-align: center;
-    margin-bottom: 2rem;
-    text-transform: capitalize;
-    color:var(--black);
-    font-size: 3rem;
-  }
-  
-  .empty{
-    border:var(--border);
-    border-radius: .5rem;
-    background-color: var(--white);
-    padding:1.5rem;
-    text-align: center;
-    width: 100%;
-    font-size: 2rem;
-    text-transform: capitalize;
-    color:var(--red);
-    box-shadow: var(--box-shadow);
-  }
-  
-  .form-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-  }
-  
-  .form-container form{
-    background-color: var(--white);
-    border-radius: .5rem;
-    border:var(--border);
-    box-shadow: var(--box-shadow);
-    padding:2rem;
-    text-align: center;
-    width: 50rem;
-  }
-  
-  .form-container form h3{
-    font-size: 2.5rem;
-    color:var(--black);
-    text-transform: capitalize;
-    margin-bottom: 1rem;
-  }
-  
-  .form-container form p{
-    margin:1rem 0;
-    font-size: 2rem;
-    color:var(--light-color);
-  }
-  
-  .form-container form p span{
-    color:var(--main-color);
-  }
-  
-  .form-container form .box{
-    width: 100%;
-    background-color: var(--light-bg);
-    padding:1.4rem;
-    font-size: 1.4rem;
-    color:var(--black);
-    margin:1rem 0;
-    border:var(--border);
-    font-size: 1.8rem;
-    border-radius: .5rem;
-  }
-  
+.heading {
+  text-align: center;
+  margin-bottom: 2rem;
+  text-transform: capitalize;
+  color: var(--yellow);
+  font-size: 3rem;
+}
+
+.empty {
+  border: var(--border);
+  border-radius: 0.5rem;
+  background-color: var(--white);
+  padding: 1.5rem;
+  text-align: center;
+  width: 100%;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--red);
+  box-shadow: var(--box-shadow);
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.form-container form {
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  border: var(--border);
+  box-shadow: var(--box-shadow);
+  padding: 2rem;
+  text-align: center;
+  width: 50rem;
+}
+
+.form-container form h3 {
+  font-size: 2.5rem;
+  color: var(--black);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+}
+
+.form-container form p {
+  margin: 1rem 0;
+  font-size: 2rem;
+  color: var(--light-color);
+}
+
+.form-container form p span {
+  color: var(--main-color);
+}
+
+.form-container form .box {
+  width: 100%;
+  background-color: var(--light-bg);
+  padding: 1.4rem;
+  font-size: 1.4rem;
+  color: var(--black);
+  margin: 1rem 0;
+  border: var(--border);
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+}
 
 /* yellow =  #ffb600; */
 /* red = #d32f2f; */
