--- a/css/visitor_style/home.css
+++ b/css/visitor_style/home.css
@@ -1,51 +1,62 @@
+:root {
+  --main-clr: #af2532;
+  --red: #d32f2f;
+  --orange: #f39c12;
+  --yellow: #e4910b;
+  --black: #34495e;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --brdr: 0.2rem solid var(--yellow);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 
- 
- .home-grid .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
-    gap:1.5rem;
-    align-items: flex-start;
- }
- 
- .home-grid .box-container .box{
-    border:var(--border);
-    box-shadow: var(--box-shadow);
-    border-radius: .5rem;
-    background-color: var(--white);
-    padding:2rem;
-    overflow: hidden;
- }
- 
- .home-grid .box-container .box p{
-    padding-bottom: 1rem;
-    font-size: 2rem;
-    color:var(--light-color);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
- }
- 
- .home-grid .box-container .box p span{
-    color:var(--main-color);
- }
- 
- .home-grid .box-container .box .flex-box{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1rem;
-    padding-top: 1rem;
- }
- 
- .home-grid .box-container .box .flex-box .links{
-    padding:1rem 3rem;
-    border-radius: .5rem;
-    background-color: var(--light-bg);
-    font-size: 2rem;
-    color:var(--black);
-    border:var(--border);
- }
- 
- .home-grid .box-container .box .flex-box .links:hover{
-    background-color: var(--black);
-    color:var(--white);
- }
+.home-grid .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
+  gap: 1.5rem;
+  align-items: flex-start;
+}
+
+.home-grid .box-container .box {
+  border: var(--brdr);
+  box-shadow: var(--box-shadow);
+  border-radius: 0.5rem;
+  background-color: var(--white);
+  padding: 2rem;
+  overflow: hidden;
+}
+
+.home-grid .box-container .box p {
+  padding-bottom: 1rem;
+  font-size: 2rem;
+  color: var(--light-color);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.home-grid .box-container .box p span {
+  color: var(--main-color);
+}
+
+.home-grid .box-container .box .flex-box {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding-top: 1rem;
+}
+
+.home-grid .box-container .box .flex-box .links {
+  padding: 1rem 3rem;
+  border-radius: 0.5rem;
+  background-color: var(--light-bg);
+  font-size: 2rem;
+  color: var(--black);
+  border: var(--brdr);
+}
+
+.home-grid .box-container .box .flex-box .links:hover {
+   background-color: var(--yellow);
+  color: var(--white);
+}
