--- a/css/visitor_style/general_visitor.css
+++ b/css/visitor_style/general_visitor.css
@@ -1,110 +1,121 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root{
-    --main-color:#4834d4;
-    --red:#e74c3c;
-    --orange:#f39c12;
-    --black:#34495e;
-    --white:#fff;
-    --light-bg:#f5f5f5;
-    --light-color:#999;
-    --border:.2rem solid var(--black);
-    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
- }
- 
- *{
-    font-family: 'Poppins', sans-serif;
-    margin:0; padding:0;
-    box-sizing: border-box;
-    outline: none; border:none;
-    text-decoration: none;
- }
- 
- *::selection{
-    background-color: var(--main-color);
-    color:var(--white);
- }
- 
- ::-webkit-scrollbar{
-    height: .5rem;
-    width: 1rem;
- }
- 
- ::-webkit-scrollbar-track{
-    background-color: none;
- }
- 
- ::-webkit-scrollbar-thumb{
-    background-color: var(--main-color);
- }
- 
- html{
-    font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scroll-padding-top: 7rem;
- }
- 
- body{
-    background-color: var(--light-bg);
-    padding-bottom: 7rem;
- }
- 
- section{
-    padding:2rem;
-    margin: 0 auto;
-    max-width: 1200px;
- }
- 
- 
- 
- .form-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: calc(100vh - 16rem);
- }
- 
- .form-container form{
-    background-color: var(--white);
-    border-radius: .5rem;
-    border:var(--border);
-    box-shadow: var(--box-shadow);
-    padding:2rem;
-    text-align: center;
-    width: 50rem;
- }
- 
- .form-container form h3{
-    font-size: 2.5rem;
-    color:var(--black);
-    text-transform: uppercase;
-    margin-bottom: 1rem;
- }
- 
- .form-container form p{
-    padding-top: 1.5rem;
-    font-size: 2rem;
-    color:var(--light-color);
- }
- 
- .form-container form p a{
-    color:var(--orange);
- }
- 
- .form-container form p a:hover{
-    text-decoration: underline;
-    color:var(--black);
- }
- 
- .form-container form .box{
-    width: 100%;
-    background-color: var(--light-bg);
-    padding:1.4rem;
-    font-size: 1.4rem;
-    color:var(--black);
-    margin:1rem 0;
-    border:var(--border);
-    font-size: 1.8rem;
-    border-radius: .5rem;
- }
+:root {
+  --main-clr: #af2532;
+  --red: #d32f2f;
+  --orange: #f39c12;
+  --yellow: #e4910b;
+  --light-yellow: #f5aa30;
+  --black: #34495e;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --brdr: 0.2rem solid var(--yellow);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  --b-shadow: 0 0 0 0.4rem rgba(234, 243, 71, 0.25);
+}
+
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+}
+
+*::selection {
+  background-color: var(--main-color);
+  color: var(--white);
+}
+
+::-webkit-scrollbar {
+  height: 0.5rem;
+  width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: 7rem;
+}
+
+body {
+  background-color: var(--light-bg);
+  /* display: flex;
+  flex-direction: column;
+  width: 100%; */
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+section {
+  padding: 2rem;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 16rem);
+}
+
+.form-container form {
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
+  padding: 2rem;
+  text-align: center;
+  width: 52rem;
+}
+
+.form-container form h3 {
+  font-size: 2.5rem;
+  color: var(--black);
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.form-container form p {
+  padding-top: 1.5rem;
+  font-size: 2rem;
+  color: var(--light-color);
+}
+
+.form-container form p a {
+  color: var(--orange);
+}
+
+.form-container form p a:hover {
+  text-decoration: underline;
+  color: var(--red);
+}
+
+.form-container form .box {
+  width: 100%;
+  background-color: var(--light-bg);
+  padding: 1.4rem;
+  font-size: 1.4rem;
+  color: var(--black);
+  margin: 1rem 0;
+  border: var(--brdr);
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+}
+.form-container form .box:focus {
+  box-shadow: var(--b-shadow);
+}
