--- a/css/visitor_style/post.css
+++ b/css/visitor_style/post.css
@@ -1,11 +1,17 @@
 :root {
   --main-clr: #af2532;
   --orange: #f39c12;
+  --blue: #4834d4;
+  --light-blue: #6853f5;
+  --green: #4cbb17;
+  --red: #dc143c;
+  --ligth-red: #ff3131;
+  --light-green: #3ed13e;
   --yellow: #e4910b;
   --black: #34495e;
+  --blacker: #191b1d;
   --white: #fff;
-  --light-bg: #f5f5f5;
-  --light-color: #999;
+  --light-bg: #f5f5f5;  
   --brdr: 0.2rem solid var(--yellow);
   --brder: 0.2rem solid var(--main-clr);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
@@ -49,7 +55,7 @@
 
 .posts-container .box-container .box .post-admin a {
   font-size: 2rem;
-  color: var(--main-color);
+  color: var(--black);
 }
 
 .posts-container .box-container .box .post-admin a:hover {
@@ -77,7 +83,7 @@
   margin-bottom: 1rem;
 }
 
-/* .posts-container .box-container .box .post-content {
+.posts-container .box-container .box .post-content {
   font-size: 2rem;
   line-height: 1.5;
   padding: 0.5rem 0;
@@ -87,16 +93,15 @@
 
 .posts-container .box-container .box .post-content::after {
   content: "...";
-} */
+}
 
 .posts-container .box-container .box .post-content {
-   font-size: 2rem;
-   line-height: 1.5;
-   padding: 0.5rem 0;
-   color: var(--light-color);
-   white-space: pre-line;
- }
-
+  font-size: 2rem;
+  line-height: 1.5;
+  padding: 0.5rem 0;
+  color: var(--black);
+  white-space: pre-line;
+}
 
 .posts-container .box-container .box .post-cat {
   display: block;
@@ -106,15 +111,18 @@
 
 .posts-container .box-container .box .post-cat i {
   margin-right: 0.5rem;
-  color: var(--light-color);
+  color: var(--blue);
+}
+.posts-container .box-container .box .post-cat i:hover {
+  color: var(--light-blue);
 }
 
 .posts-container .box-container .box .post-cat {
-  color: var(--main-color);
+ color: var(--black);
 }
 
 .posts-container .box-container .box .post-cat:hover {
-  color: var(--black);
+ color: var(--blacker);
 }
 
 .posts-container .box-container .box .icons {
@@ -133,17 +141,29 @@
   cursor: pointer;
 }
 
-.posts-container .box-container .box .icons i {
+.posts-container .box-container .box .icons .fa-comment {
   margin-right: 0.5rem;
   font-size: 2rem;
-  color: var(--light-color);
+  color: var(--green);
+}
+.posts-container .box-container .box .icons .fa-comment:hover {
+  color: var(--light-green);
+}
+
+.posts-container .box-container .box .icons .fa-heart {
+  margin-right: 0.5rem;
+  font-size: 2rem;
+  color: var(--red);
+}
+.posts-container .box-container .box .icons .fa-heart:hover {
+  color: var(--ligth-red);
 }
 
 .posts-container .box-container .box .icons span {
   font-size: 2rem;
-  color: var(--main-color);
+  color: var(--black);
 }
 
 .posts-container .box-container .box .icons *:hover {
-  color: var(--black);
+  color: var(--blacker);
 }
