--- a/css/visitor_style/visitor_header.css
+++ b/css/visitor_style/visitor_header.css
@@ -3,14 +3,13 @@
   --red: #d32f2f;
   --orange: #f39c12;
   --yellow: #e4910b;
-  --light-yellow: #f5aa30;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
   --light-color: #999;
   --brdr: 0.2rem solid var(--yellow);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  --b-shadow:  0 0 0 0.4rem rgba(234, 243, 71, 0.25);
+  --b-shadow: 0 0 0 0.4rem rgba(234, 243, 71, 0.25);
 }
 
 .empty {
@@ -30,14 +29,13 @@
   margin-bottom: 2rem;
   text-align: center;
   font-size: 4rem;
-  color: var(--black);
+  color: var(--main-clr);
   text-transform: capitalize;
 }
 
 .header {
   background-color: var(--white);
   box-shadow: var(--box-shadow);
-  border-bottom: var(--brdr);
   position: sticky;
   top: 0;
   left: 0;
@@ -64,13 +62,16 @@
   border-radius: 0.5rem;
   background-color: var(--light-bg);
   display: flex;
-  gap: 2rem;
   padding: 1.5rem 2rem;
   width: 50rem;
   caret-color: var(--red);
   outline: none;
 }
 
+.header .flex .search-form:focus {
+ box-shadow: var(--b-shadow);
+ /* outline: var(--yellow); */
+}
 
 .header .flex .search-form .box {
   width: 100%;
@@ -78,17 +79,11 @@
   font-size: 1.7rem;
   color: var(--black);
 }
-/* .header .flex .search-form .box:focus{
-   outline-style: solid;
-   outline: var(--yellow);
-   border: var(--b-shadow);
-  
-  } */
 
 .header .flex .search-form .fa-search {
   font-size: 2rem;
   cursor: pointer;
- color: var(--yellow);
+  color: var(--yellow);
   background: none;
 }
 
