--- a/css/admin_style/admin_header.css
+++ b/css/admin_style/admin_header.css
@@ -6,6 +6,7 @@
   --white: #fff;
   --light-bg: #f5f5f5;
   --light-color: #999;
+  --brdr: 0.2rem solid var(--yellow);
   --border: 0.2rem solid var(--black);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
@@ -16,7 +17,7 @@
   left: 0;
   background-color: var(--white);
   z-index: 1000;
-  border-right: var(--border);
+  border-right: var(--brdr);
   width: 35rem;
   padding: 2rem;
   min-height: 100vh;
@@ -39,8 +40,8 @@
   padding: 2rem;
   border-radius: 0.5rem;
   background-color: var(--light-bg);
+  border: var(--brdr);
   margin: 2rem 0;
-  border: var(--border);
 }
 
 .header .profile p {
