--- a/css/admin_style/buttons.css
+++ b/css/admin_style/buttons.css
@@ -3,6 +3,7 @@
   --black: #34495e;
   --blue: #4834d4;
   --red: #d32f2f;
+  --light-yellow: #f6b244;
   --main-clr: #af2532;
   --white: #fff;
   --light-bg: #f5f5f5;
@@ -55,21 +56,24 @@
 .delete-btn {
   background-color: var(--red);
 }
+.delete-btn:hover{
+ background-color: red;
+}
 
 .inline-option-btn,
 .option-btn {
   background-color: var(--orange);
 }
+.option-btn:hover{
+  background-color: var(--light-yellow);
+}
 
 
 .btn:hover,
 .btn-side:hover,
-.delete-btn:hover,
-.option-btn:hover,
 .inline-btn:hover,
-.inline-delete-btn:hover,
 .inline-option-btn:hover {
-background-color: var(--black);
+background-color: var(--red);
 }
 
 .flex-btn {
