--- a/css/admin_style/general_admin.css
+++ b/css/admin_style/general_admin.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --main-color: #4834d4;
+  --main-clr: #af2532;
   --red: #e74c3c;
   --yellow: #e4910b;
   --black: #34495e;
@@ -9,7 +9,9 @@
   --light-bg: #f5f5f5;
   --light-color: #999;
   --border: 0.2rem solid var(--black);
+  --brdr: 0.2rem solid var(--yellow);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  --b-shadow: 0 0 0 0.4rem rgba(234, 243, 71, 0.25);
 }
 * {
   font-family: "Poppins", sans-serif;
@@ -61,7 +63,7 @@ section {
   text-align: center;
   margin-bottom: 2rem;
   text-transform: capitalize;
-  color: var(--yellow);
+  color: var(--main-clr);
   font-size: 3rem;
 }
 
@@ -88,11 +90,10 @@ section {
 .form-container form {
   background-color: var(--white);
   border-radius: 0.5rem;
-  border: var(--border);
   box-shadow: var(--box-shadow);
-  padding: 2rem;
+  padding: 3rem;
   text-align: center;
-  width: 50rem;
+  width: 52rem;
 }
 
 .form-container form h3 {
@@ -119,9 +120,13 @@ section {
   font-size: 1.4rem;
   color: var(--black);
   margin: 1rem 0;
-  border: var(--border);
+  border: var(--brdr);
   font-size: 1.8rem;
   border-radius: 0.5rem;
+}
+
+.form-container form .box:hover {
+  box-shadow: var(--b-shadow);
 }
 
 /* yellow =  #ffb600; */
