--- a/css/admin_style/post.css
+++ b/css/admin_style/post.css
@@ -1,19 +1,26 @@
 :root {
-  --main-color: #4834d4;
-  --red: #e74c3c;
+  --main-clr: #af2532;
   --orange: #f39c12;
+  --blue: #4834d4;
+  --light-blue: #6853f5;
+  --green: #4cbb17;
+  --red: #dc143c;
+  --ligth-red: #ff3131;
+  --light-green: #3ed13e;
+  --yellow: #e4910b;
   --black: #34495e;
+  --blacker: #191b1d;
   --white: #fff;
-  --light-bg: #f5f5f5;
-  --light-color: #999;
-  --border: 0.2rem solid var(--black);
+  --light-bg: #f5f5f5;  
+  --brdr: 0.2rem solid var(--yellow);
+  --brder: 0.2rem solid var(--main-clr);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 .post-editor form {
   background-color: var(--white);
   border-radius: 0.5rem;
-  border: var(--border);
+  border: var(--brdr);
   padding: 2rem;
   box-shadow: var(--box-shadow);
   max-width: 80rem;
@@ -35,7 +42,7 @@
   width: 100%;
   margin: 1rem 0;
   border-radius: 0.5rem;
-  border: var(--border);
+  border: var(--brdr);
   padding: 1.4rem;
   font-size: 1.8rem;
   color: var(--black);
@@ -66,7 +73,7 @@
   background-color: var(--white);
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
-  border: var(--border);
+  border: var(--brdr);
   padding: 2rem;
   overflow: hidden;
 }
@@ -100,19 +107,18 @@
 
 .show-posts .box-container .box .posts-content {
   font-size: 1.7rem;
-  color: var(--light-color);
+  color: var(--black);
   line-height: 1.5;
   padding: 1rem 0;
 }
 
 .show-posts .box-container .box .posts-content:not(:empty):not(:after) {
-  display: inline; 
+  display: inline;
 }
 
 .show-posts .box-container .box .posts-content:not(:empty):not(:after)::after {
-  content: "..."; 
+  content: "...";
 }
-
 
 .show-posts .box-container .box .icons {
   display: flex;
@@ -122,7 +128,7 @@
   background-color: var(--light-bg);
   border-radius: 0.5rem;
   padding: 1.5rem 2rem;
-  border: var(--border);
+  border: var(--brdr);
   margin: 0.5rem 0;
 }
 
@@ -131,17 +137,35 @@
 }
 
 .show-posts .box-container .box .icons div span {
-  color: var(--main-color);
+  color: var(--black);
 }
 
-.show-posts .box-container .box .icons div i {
+/* .show-posts .box-container .box .icons div i {
   color: var(--light-color);
   margin-right: 0.5rem;
+} */
+
+.show-posts .box-container .box .icons .fa-comment {
+  margin-right: 0.5rem;
+  font-size: 2rem;
+  color: var(--green);
+}
+.show-posts .box-container .box .icons .fa-comment:hover {
+  color: var(--light-green);
+}
+
+.show-posts  .box-container .box .icons .fa-heart {
+  margin-right: 0.5rem;
+  font-size: 2rem;
+  color: var(--red);
+}
+.show-posts  .box-container .box .icons .fa-heart:hover {
+  color: var(--ligth-red);
 }
 
 .read-post form {
   border-radius: 0.5rem;
-  border: var(--border);
+  border: var(--brdr);
   padding: 2rem;
   background-color: var(--white);
   box-shadow: var(--box-shadow);
