--- a/css/admin_style/accounts.css
+++ b/css/admin_style/accounts.css
@@ -1,11 +1,14 @@
 :root {
-  --red: #e74c3c;
+  --main-clr: #af2532;
+  --red: #d32f2f;
   --orange: #f39c12;
+  --yellow: #e4910b;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
   --light-color: #999;
   --brdr: 0.2rem solid var(--yellow);
+  --brder: 0.2rem solid var(--main-clr);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
@@ -34,5 +37,5 @@
 }
 
 .accounts .box-container .box p span {
-  color: var(--main-color);
+  color: var(--main-clr);
 }
