--- a/css/admin_style/comments.css
+++ b/css/admin_style/comments.css
@@ -1,101 +1,101 @@
 :root {
-  --main-color: #4834d4;
-  --red: #e74c3c;
+  --main-clr: #af2532;
+  --red: #d32f2f;
   --orange: #f39c12;
+  --yellow: #e4910b;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
   --light-color: #999;
-  --border: 0.2rem solid var(--black);
+  --brdr: 0.2rem solid var(--yellow);
+  --brder: 0.2rem solid var(--main-clr);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
-.comments .comment-title{
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
-    background-color: var(--black);  
-    padding:2rem;
-    color:var(--white);
-    font-size: 2rem;
-  }
-  
-  .comments .box-container{
-    border-bottom-right-radius: .5rem;
-    border-bottom-left-radius: .5rem;
-    background-color: var(--white);
-    box-shadow: var(--box-shadow);
-    border:var(--border);
-    padding:2rem;
-    display: grid;
-    gap:2rem;
-  }
-  
-  .comments .box-container .box{
-    background-color: var(--light-bg);
-    border-radius: .5rem;
-    padding:1.5rem;
-    border:var(--border);
-  }
-  
-  .comments .box-container .post-title{
-    font-size: 2rem;
-    color:var(--light-color);
-  }
-  
-  .comments .box-container .post-title span{
-    color: var(--black);
-  }
-  
-  .comments .box-container .post-title a{
-    color:var(--main-color);
-    margin-left: .5rem;
-  }
-  
-  .comments .box-container .post-title a:hover{
-    color:var(--black);
-    text-decoration: underline;
-  }
-  
-  .comments .box-container .box .user{
-    display: flex;
-    align-items: center;
-    gap:1rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  .comments .box-container .box .user i{
-    font-size: 2rem;
-    border-radius: .5rem;
-    border:var(--border);
-    height: 4.5rem;
-    width: 5rem;
-    line-height: 4.1rem;
-    background-color: var(--white);
-    text-align: center;
-    color:var(--light-color);
-  }
-  
-  .comments .box-container .box .user .user-info span{
-    font-size: 2rem;
-    color:var(--main-color);
-  }
-  
-  .comments .box-container .box .user .user-info div{
-    color:var(--light-color);
-    font-size: 1.6rem;
-    margin-top: .2rem;
-  }
-  
-  .comments .box-container .box .text{
-    font-size: 1.8rem;
-    color:var(--black);
-    line-height: 1.5;
-    white-space: pre-line;
-    background-color: var(--white);
-    border-radius: .5rem;
-    padding:1.5rem;
-    margin:.5rem 0;
-    border:var(--border);
-  }
-  
-  
+.comments .comment-title {
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  background-color: var(--yellow);
+  padding: 2rem;
+  color: var(--white);
+  font-size: 2rem;
+}
+
+.comments .box-container {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  border: var(--brdr);
+  padding: 2rem;
+  display: grid;
+  gap: 2rem;
+}
+
+.comments .box-container .box {
+  background-color: var(--light-bg);
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  border: var(--brdr);
+}
+
+.comments .box-container .post-title {
+  font-size: 2rem;
+  color: var(--light-color);
+}
+
+.comments .box-container .post-title span {
+  color: var(--black);
+}
+
+.comments .box-container .post-title a {
+  color: var(--main-color);
+  margin-left: 0.5rem;
+}
+
+.comments .box-container .post-title a:hover {
+  color: var(--black);
+  text-decoration: underline;
+}
+
+.comments .box-container .box .user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.comments .box-container .box .user i {
+  font-size: 2rem;
+  border-radius: 0.5rem;
+  border: var(--brder);
+  height: 4.5rem;
+  width: 5rem;
+  line-height: 4.1rem;
+  background-color: var(--white);
+  text-align: center;
+  color: var(--main-clr);
+}
+
+.comments .box-container .box .user .user-info span {
+  font-size: 2rem;
+  color: var(--main-clr);
+}
+
+.comments .box-container .box .user .user-info div {
+  color: var(--light-color);
+  font-size: 1.6rem;
+  margin-top: 0.2rem;
+}
+
+.comments .box-container .box .text {
+  font-size: 1.8rem;
+  color: var(--black);
+  line-height: 1.5;
+  white-space: pre-line;
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  margin: 0.5rem 0;
+  border: var(--brdr);
+}
