--- a/css/admin_style/messages.css
+++ b/css/admin_style/messages.css
@@ -1,40 +1,42 @@
 :root {
   --main-color: #4834d4;
-  --red: #e74c3c;
+  --brigth-red: #ff0000;
   --orange: #f39c12;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
   --light-color: #999;
   --border: 0.2rem solid var(--black);
+  --brdr: 0.2rem solid var(--yellow);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
-.message{
-    position: sticky;
-    top:0;
-    margin:0 auto;
-    background-color: var(--white);
-    padding:2rem;
-    display: flex;
-    align-items: center;
-    gap:1rem;
-    justify-content: space-between;
-    box-shadow: var(--box-shadow);
-    border-bottom:var(--border);
-  }
-  
-  .message span{
-    font-size: 2rem;
-    color:var(--black);
-  }
-  
-  .message i{
-    font-size: 2.5rem;
-    color:var(--red);
-    cursor: pointer;
-  }
-  
-  .message i:hover{
-    color:var(--black);
-  }
+.message {
+  position: sticky;
+  top: 0;
+  margin: 0 auto;
+  background-color: var(--white);
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  justify-content: space-between;
+  box-shadow: var(--box-shadow);
+  border-bottom: var(--brdr);
+}
+
+.message span {
+  font-size: 2rem;
+  color: var(--black);
+}
+
+.message i {
+  font-size: 2.5rem;
+  color: var(--red);
+  cursor: pointer;
+}
+
+.message i:hover {
+ color: var(--brigth-red);
+}
+
