--- a/css/visitor_style/buttons.css
+++ b/css/visitor_style/buttons.css
@@ -1,7 +1,9 @@
 :root {
   --main-clr: #af2532;
   --red: #d32f2f;
+  --ligth-red: #ff3131;
   --orange: #f39c12;
+  --yellow: #e4910b;
   --black: #34495e;
   --white: #fff;
   --light-bg: #f5f5f5;
@@ -49,15 +51,19 @@
 .delete-btn {
   background-color: var(--red);
 }
+.delete-btn:hover{
+  background-color: var(--ligth-red);
+}
 
 .inline-option-btn,
 .option-btn {
-  background-color: var(--main-clr);
+  background-color: var(--yellow);
+}
+.option-btn:hover{
+  background-color: var(--orange);
 }
 
 .btn:hover,
-.delete-btn:hover,
-.option-btn:hover,
 .inline-btn:hover,
 .inline-delete-btn:hover,
 .inline-option-btn:hover {
