--- a/css/visitor_style/messages.css
+++ b/css/visitor_style/messages.css
@@ -1,8 +1,20 @@
-
+:root {
+   --main-color: #4834d4;
+   --brigth-red: #ff0000;
+   --orange: #f39c12;
+   --black: #34495e;
+   --white: #fff;
+   --light-bg: #f5f5f5;
+   --light-color: #999;
+   --border: 0.2rem solid var(--black);
+   --brdr: 0.2rem solid var(--yellow);
+   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+ }
+ 
 .message{
     position: sticky;
     top:0;
-    max-width: 1200px;
+    max-width: 500rem;
     margin:0 auto;
     background-color: var(--light-bg);
     padding:2rem;
@@ -10,6 +22,8 @@
     align-items: center;
     gap:1rem;
     justify-content: space-between;
+    border-bottom: var(--brdr);
+
  }
  
  .message span{
