--- a/css/visitor_style/post.css
+++ b/css/visitor_style/post.css
@@ -3,7 +3,7 @@
   --orange: #f39c12;
   --blue: #4834d4;
   --light-blue: #6853f5;
-  --green: #4cbb17;
+  --green: #009e60;
   --red: #dc143c;
   --ligth-red: #ff3131;
   --light-green: #3ed13e;
@@ -11,7 +11,7 @@
   --black: #34495e;
   --blacker: #191b1d;
   --white: #fff;
-  --light-bg: #f5f5f5;  
+  --light-bg: #f5f5f5;
   --brdr: 0.2rem solid var(--yellow);
   --brder: 0.2rem solid var(--main-clr);
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
@@ -55,11 +55,11 @@
 
 .posts-container .box-container .box .post-admin a {
   font-size: 2rem;
-  color: var(--black);
+  color: var(--main-clr);
 }
 
 .posts-container .box-container .box .post-admin a:hover {
-  color: var(--black);
+  color: var(--ligth-red);
 }
 
 .posts-container .box-container .box .post-admin div {
@@ -75,24 +75,22 @@
 }
 
 .posts-container .box-container .box .post-title {
-  font-size: 2rem;
+  font-size: 2.3rem;
   color: var(--black);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-bottom: 1rem;
+  text-transform: capitalize;
 }
 
 .posts-container .box-container .box .post-content {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.5;
   padding: 0.5rem 0;
   color: var(--light-color);
   white-space: pre-line;
-}
-
-.posts-container .box-container .box .post-content::after {
-  content: "...";
+  text-align: justify;
 }
 
 .posts-container .box-container .box .post-content {
@@ -118,11 +116,11 @@
 }
 
 .posts-container .box-container .box .post-cat {
- color: var(--black);
+  color: var(--black);
 }
 
 .posts-container .box-container .box .post-cat:hover {
- color: var(--blacker);
+  color: var(--blacker);
 }
 
 .posts-container .box-container .box .icons {
