--- a/css/visitor_style/responsive_visitor.css
+++ b/css/visitor_style/responsive_visitor.css
@@ -1,58 +1,60 @@
+:root {
+  --main-clr: #af2532;
+  --red: #d32f2f;
+  --orange: #f39c12;
+  --yellow: #e4910b;
+  --black: #34495e;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --brdr: 0.2rem solid var(--yellow);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 
- 
- 
- 
- 
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+}
 
- 
- 
- 
- @media (max-width:991px){
- 
-    html{
-       font-size: 55%;
-    }
- 
- }
- 
- @media (max-width:768px){
- 
-    body{
-       padding-bottom: 10rem;
-    }
- 
-    #search-btn{
-       display: inline-block;
-    }
- 
-    .header .flex .search-form{
-       position: absolute;
-       top:99%; left:0; right: 0;
-       border-left: none;
-       border-right: none;
-       border-radius: 0;
-       width: 100%;
-       background-color: var(--white);
-       box-shadow: var(--box-shadow);
-       padding:2rem;
-       clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-       transition: .2s linear;
-    }
- 
-    .header .flex .search-form.active{
-       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
- 
- }
- 
- @media (max-width:450px){
- 
-    html{
-       font-size: 50%;
-    }
- 
-    .heading{
-       font-size: 3rem;
-    }  
- 
- }
+@media (max-width: 768px) {
+  #search-btn {
+    display: inline-block;
+  }
+
+  .header .flex .search-form {
+    position: absolute;
+    top: 99%;
+    left: 0;
+    right: 0;
+    border-left: none;
+    border-right: none;
+    border-radius: 0;
+    width: 100%;
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    padding: 2rem;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: 0.2s linear;
+  }
+
+  .header .flex .search-form.active {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .heading {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 375px) {
+  body {
+    width: 50rem;
+  }
+}
