modify and add register page
this register page are for those who doesnt have any account existed in the system.

--- a/css/admin_style/admin_header.css
+++ b/css/admin_style/admin_header.css
@@ -47,7 +47,9 @@
 .header .profile p {
   margin-bottom: 1.5rem;
   font-size: 2rem;
-  color: var(--black);
+  color: var(--main-clr);
+  font-weight: 600;
+  text-transform: capitalize;
 }
 
 .header .navbar {
